apps/homelab/jellyfleet/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: jellyfleet
  labels:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/component: media-automation
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/part-of: jellyfleet
spec:
  selector:
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: bazarr
  ports:
    - port: 80
      targetPort: 6767
      protocol: TCP
